# python-project-174

./: .flake8  README.md  pyproject.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  diff.py  diff_builder.py  gendiff.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py  test_plain.py  utils.py
tests/fixtures/: file1.json  file2.json
