[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Byron Ramirez"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
pytest = "^9.0.2"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"


